# trailing-stops

./: .gitignore  .mise.toml  AGENTS.md  README.md  config.toml  pyproject.toml
src/trailing_stop_loss/: __init__.py  calculator.py  cli.py  config.py  fetcher.py  history.py
tests/: __init__.py  test_calculator.py  test_config.py  test_fetcher.py  test_history.py
