[project]
name = "trailing-stop-loss"
version = "0.1.0"
description = "Calculate stop-loss prices for stock positions with beautiful CLI output"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "yfinance>=0.2.50",
    "typer>=0.15.0",
    "rich>=14.0.0",
    "tomli>=2.2.0; python_version<'3.11'",
]

[project.scripts]
stop-loss = "trailing_stop_loss.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "ty>=0.0.2",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "PT"]
ignore = ["PT011"]  # pytest.raises without match parameter is acceptable for our tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=trailing_stop_loss --cov-report=term-missing"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
